# PillWise

./: 01_scraper.ipynb.ipynb  02_load_and_chunk.ipynb  03_embeddings.ipynb.ipynb  04_vectorstore.ipynb  05_retrieval.ipynb.ipynb  README.md  main.py  pw-api.py  pyproject.toml
.ipynb_checkpoints/: 01_scraper.ipynb-checkpoint.ipynb  02_load_and_chunk-checkpoint.ipynb
