[project]
name = "pillwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "notebook>=7.5.7",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.2",
]
