[project]
name = "pillwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "notebook>=7.5.7",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "uvicorn>=0.49.0",
    "webdriver-manager>=4.1.2",
]
